--- a/index.html
+++ b/index.html
@@ -24,47 +24,45 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="container">
-        <div class="header-inner">
-          <nav class="header-nav">
-            <a class="logo" href="./index.html"
-              >Web<span class="accent">Studio</span>
-            </a>
-            <ul class="nav-list">
-              <li>
-                <a class="nav-item" href="./index.html">studio</a>
-              </li>
-              <li>
-                <a class="nav-item" href="">portfolio</a>
-              </li>
-              <li>
-                <a class="nav-item" href="">contacts</a>
-              </li>
-            </ul>
-          </nav>
+        <nav class="header-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="accent">Studio</span>
+          </a>
+          <ul class="nav-list">
+            <li>
+              <a class="nav-item" href="./index.html">studio</a>
+            </li>
+            <li>
+              <a class="nav-item" href="">portfolio</a>
+            </li>
+            <li>
+              <a class="nav-item" href="">contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-          <address class="contact-info">
-            <ul class="contacts-list">
-              <li>
-                <a class="contacts" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="contacts" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <address class="contact-info">
+          <ul class="contacts-list">
+            <li>
+              <a class="contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <section class="hero-sec">
         <div class="container">
           <div class="hero-inner">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -75,39 +73,37 @@
       <!-- About section -->
       <section class="about-sec">
         <div class="container">
-          <div class="about-inner">
-            <h2 class="about-main-title">About us</h2>
-            <ul class="about-list">
-              <li class="about-item">
-                <h3 class="about-title">Strategy</h3>
-                <p class="about-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="about-item">
-                <h3 class="about-title">Punctuality</h3>
-                <p class="about-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="about-item">
-                <h3 class="about-title">Diligence</h3>
-                <p class="about-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="about-item">
-                <h3 class="about-title">Technologies</h3>
-                <p class="about-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <h2 class="visually-hidden">About us</h2>
+          <ul class="about-list">
+            <li class="about-item">
+              <h3 class="about-title">Strategy</h3>
+              <p class="about-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Punctuality</h3>
+              <p class="about-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Diligence</h3>
+              <p class="about-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Technologies</h3>
+              <p class="about-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -166,67 +162,59 @@
       <section class="portfolio-sec">
         <div class="container">
           <div class="portfolio-inner">
-            <h2 class="portfolio-title">our portfolio</h2>
-            <ul class="portfolio-list">
-              <li>
-                <img src="./images/img.jpg" alt="Banking App" width="360" />
-                <div class="portfolio-elem-info">
-                  <h3 class="portfolio-elem">Banking App</h3>
-                  <p class="portfolio-descr">App</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  src="./images/img-a.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
-                <div class="portfolio-elem-info">
-                  <h3 class="portfolio-elem">Cashless Payment</h3>
-                  <p class="portfolio-descr">Marketing</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  src="./images/img-b.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
-                <div class="portfolio-elem-info">
-                  <h3 class="portfolio-elem">Meditation App</h3>
-                  <p class="portfolio-descr">App</p>
-                </div>
-              </li>
-              <li>
-                <img src="./images/img-c.jpg" alt="Taxi Service" width="360" />
-                <div class="portfolio-elem-info">
-                  <h3 class="portfolio-elem">Taxi Service</h3>
-                  <p class="portfolio-descr">Marketing</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  src="./images/img-d.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
-                <div class="portfolio-elem-info">
-                  <h3 class="portfolio-elem">Screen Illustrations</h3>
-                  <p class="portfolio-descr">Design</p>
-                </div>
-              </li>
-              <li>
-                <img
-                  src="./images/img-e.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
-                <div class="portfolio-elem-info">
-                  <h3 class="portfolio-elem">Online Courses</h3>
-                  <p class="portfolio-descr">Marketing</p>
-                </div>
-              </li>
-            </ul>
+          <h2 class="portfolio-title">our portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img src="./images/img.jpg" alt="Banking App" width="360" />
+              <div class="portfolio-elem-info">
+                <h3 class="portfolio-elem">Banking App</h3>
+                <p class="portfolio-descr">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/img-a.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <div class="portfolio-elem-info">
+                <h3 class="portfolio-elem">Cashless Payment</h3>
+                <p class="portfolio-descr">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-b.jpg" alt="Meditation App" width="360" />
+              <div class="portfolio-elem-info">
+                <h3 class="portfolio-elem">Meditation App</h3>
+                <p class="portfolio-descr">App</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-c.jpg" alt="Taxi Service" width="360" />
+              <div class="portfolio-elem-info">
+                <h3 class="portfolio-elem">Taxi Service</h3>
+                <p class="portfolio-descr">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/img-d.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="portfolio-elem-info">
+                <h3 class="portfolio-elem">Screen Illustrations</h3>
+                <p class="portfolio-descr">Design</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/img-e.jpg" alt="Online Courses" width="360" />
+              <div class="portfolio-elem-info">
+                <h3 class="portfolio-elem">Online Courses</h3>
+                <p class="portfolio-descr">Marketing</p>
+              </div>
+            </li>
+          </ul>
           </div>
         </div>
       </section>
