--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
     <main>
       <!-- Hero section -->
       <section class="hero-sec">
-        <div class="container">
-          <div class="hero-inner">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="button" type="button">Order Service</button>
-          </div>
+        <div class="container hero-inner">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
         </div>
       </section>
+
       <!-- About section -->
       <section class="about-sec">
         <div class="container">
@@ -109,59 +108,44 @@
 
       <!-- Team section -->
       <section class="team-sec">
-        <div class="container">
-          <div class="team-inner">
-            <h2 class="team-title">our team</h2>
-            <ul class="team-list">
-              <li class="member-card">
-                <img
-                  src="./images/img-01.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                />
-                <div class="team-member-info">
-                  <h3 class="team-member">Mark Guerrero</h3>
-                  <p class="member-position">Product Designer</p>
-                </div>
-              </li>
-              <li class="member-card">
-                <img src="./images/img-02.jpg" alt="Tom Ford" width="264" />
-                <div class="team-member-info">
-                  <h3 class="team-member">Tom Ford</h3>
-                  <p class="member-position">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="member-card">
-                <img
-                  src="./images/img-03.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                />
-                <div class="team-member-info">
-                  <h3 class="team-member">Camila Garcia</h3>
-                  <p class="member-position">Marketing</p>
-                </div>
-              </li>
-              <li class="member-card">
-                <img
-                  src="./images/img-04.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                />
-                <div class="team-member-info">
-                  <h3 class="team-member">Daniel Wilson</h3>
-                  <p class="member-position">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+        <div class="container team-inner">
+          <h2 class="team-title">our team</h2>
+          <ul class="team-list">
+            <li class="member-card">
+              <img src="./images/img-01.jpg" alt="Mark Guerrero" width="264" />
+              <div class="team-member-info">
+                <h3 class="team-member">Mark Guerrero</h3>
+                <p class="member-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="member-card">
+              <img src="./images/img-02.jpg" alt="Tom Ford" width="264" />
+              <div class="team-member-info">
+                <h3 class="team-member">Tom Ford</h3>
+                <p class="member-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="member-card">
+              <img src="./images/img-03.jpg" alt="Camila Garcia" width="264" />
+              <div class="team-member-info">
+                <h3 class="team-member">Camila Garcia</h3>
+                <p class="member-position">Marketing</p>
+              </div>
+            </li>
+            <li class="member-card">
+              <img src="./images/img-04.jpg" alt="Daniel Wilson" width="264" />
+              <div class="team-member-info">
+                <h3 class="team-member">Daniel Wilson</h3>
+                <p class="member-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
       <!--Portfolio section-->
       <section class="portfolio-sec">
-        <div class="container">
-          <div class="portfolio-inner">
+        <div class="container portfolio-inner">
           <h2 class="portfolio-title">our portfolio</h2>
           <ul class="portfolio-list">
             <li>
@@ -215,22 +199,19 @@
               </div>
             </li>
           </ul>
-          </div>
         </div>
       </section>
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer-inner">
-          <a class="footer-logo" href="./index.html"
-            >Web<span class="footer-accent">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+      <div class="container footer-inner">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
