redact portfolio sec

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
         <div class="container portfolio-inner">
           <h2 class="portfolio-title">our portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img.jpg" alt="Banking App" width="360" />
               <div class="portfolio-elem-info">
                 <h3 class="portfolio-elem">Banking App</h3>
                 <p class="portfolio-descr">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-a.jpg"
                 alt="Cashless Payment"
@@ -166,21 +166,21 @@
                 <p class="portfolio-descr">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img-b.jpg" alt="Meditation App" width="360" />
               <div class="portfolio-elem-info">
                 <h3 class="portfolio-elem">Meditation App</h3>
                 <p class="portfolio-descr">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img-c.jpg" alt="Taxi Service" width="360" />
               <div class="portfolio-elem-info">
                 <h3 class="portfolio-elem">Taxi Service</h3>
                 <p class="portfolio-descr">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-d.jpg"
                 alt="Screen Illustrations"
@@ -191,7 +191,7 @@
                 <p class="portfolio-descr">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img src="./images/img-e.jpg" alt="Online Courses" width="360" />
               <div class="portfolio-elem-info">
                 <h3 class="portfolio-elem">Online Courses</h3>
