--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-inner">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
             >Web<span class="accent">Studio</span>
@@ -204,7 +204,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer-inner">
+      <div class="container">
         <a class="footer-logo" href="./index.html"
           >Web<span class="footer-accent">Studio</span></a
         >
